src/modules/reports/components/ReportsItem/ReportsItem.module.css
.link {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;

  width: 93px;

  text-decoration: none;
}
.text {
  font-weight: 400;
  font-size: 12px;
  line-height: 14px;
  letter-spacing: 0.04em;
  text-transform: uppercase;

  text-align: center;

  color: #52555f;
}
.category {
  letter-spacing: 0.02em;
}

